- read and parse data from csv file using csv parser method and return data in form of MatchModelRecord - made appConstants File - made a list of matches to add and show match from it